# paint-by-language-model

./: .env.example  .gitignore  LICENSE  README.md  run_queue.sh
.github/: pull_request_template.md
.github/workflows/: build-nextjs.yml  deploy-nextjs-gh-pages.yml  pr-tests.yml
.husky/: pre-commit
scripts/: backfill_evaluations.py  backfill_viewer_metadata.py  minify_viewer_data.py
src/datafiles/: artists.json  queue.anthropic.json  queue.backup-2026-03-20.json  queue.json  queue.lowry.anthropic.json  queue.mistral.json  queue.original.json  stroke_samples.json
src/datafiles/prompts/: stroke_prompt.txt  stroke_system_prompt.txt  stroke_user_prompt.txt
src/paint_by_language_model/: artist_loader.py  config.py  file_writer.py  generation_orchestrator.py  lmstudio_client.py  main.py  prompt_builder.py  pyproject.toml  response_parser.py  strategy_manager.py  vlm_client.py
src/paint_by_language_model/models/: __init__.py  canvas_state.py  evaluation_result.py  generation_config.py  generation_metadata.py  painting_plan.py  strategy_context.py  stroke.py  stroke_vlm_response.py
src/paint_by_language_model/services/: __init__.py  artwork_persistence.py  canvas_manager.py  evaluation_vlm_client.py  gif_generator.py  json_utils.py  planner_llm_client.py  prompt_logger.py  state_loader.py  stroke_parser.py  stroke_sample_generator.py  stroke_vlm_client.py
src/paint_by_language_model/services/clients/: __init__.py  evaluation_vlm_client.py  planner_llm_client.py  stroke_vlm_client.py
src/paint_by_language_model/services/renderers/: __init__.py  arc_renderer.py  base_renderer.py  burn_renderer.py  chalk_renderer.py  circle_renderer.py  dodge_renderer.py  dry_brush_renderer.py  line_renderer.py  polyline_renderer.py  prng.py  renderer_utils.py  splatter_renderer.py  wet_brush_renderer.py
src/paint_by_language_model/utils/: __init__.py  json_utils.py
src/paint_by_language_model/viewer/: index.html  style.css
src/viewer/: .gitignore  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package.json  pnpm-lock.yaml
src/viewer/public/: site.webmanifest
src/viewer/src/app/: globals.css  layout.tsx  page.tsx
src/viewer/src/components/: ArtworkCard.tsx  DrawCanvas.tsx  DrawPage.tsx  DrawToolbar.tsx  EmptyState.tsx  Gallery.tsx  SidePanel.tsx  StrokeCanvas.tsx  Timeline.tsx  Toolbar.tsx
src/viewer/src/config/: constants.ts
src/viewer/src/hooks/: usePaintWindowApi.ts
src/viewer/src/lib/: artworks.ts  basePath.ts  color-utils.ts  draw-persistence.ts  draw-types.ts  format-utils.ts  hit-detection.ts  paintApiSchema.ts  prng.ts  (+2 more)
tests/: __init__.py  integration_test_canvas_manager_renderer_factory.py  integration_test_orchestrator.py  manual_test_anthropic_caching.py  manual_test_anthropic_vlm.py  manual_test_evaluation_vlm.py  manual_test_orchestrator.py  manual_test_stroke_vlm.py  test_arc_renderer.py  test_arc_renderer_comprehensive.py  test_artwork_persistence.py  test_burn_renderer.py  test_canvas_manager.py  test_canvas_manager_batch.py  test_chalk_renderer.py  test_circle_renderer.py  test_circle_renderer_comprehensive.py  test_config_imports.py  test_dodge_renderer.py  test_dry_brush_renderer.py  test_evaluation_prompt_plan.py  test_generation_config.py  test_gif_generator.py  test_json_utils.py  test_line_renderer.py  test_llm_json_parsing.py  test_orchestrator_batch_init.py  test_orchestrator_config_propagation.py  test_orchestrator_min_strokes.py  test_painting_plan_models.py  test_planner_llm_client.py  test_polyline_renderer.py  test_polyline_renderer_comprehensive.py  test_prng.py  test_prompt_caching.py  test_prompt_logger.py  test_renderer_utils.py  test_splatter_renderer.py  test_splatter_renderer_comprehensive.py  test_state_loader.py  (+12 more)
(+152 files in other folders)
