[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paint-by-language-model"
version = "0.2.0"
description = "Query LLMs to analyze artists and generate artwork in their style"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
advanced = [
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
paint-by-lm = "paint_by_language_model.main:main"

[tool.setuptools]
py-modules = ["config", "prompt_builder", "lmstudio_client", "file_writer", "response_parser", "artist_loader", "main"]
